--- a/src/view/style.css
+++ b/src/view/style.css
@@ -1,17 +1,16 @@
-.slider {
+.j-plugin-slider {
   border-radius: 5px;
-  background: #e0e0e0;
-  background: linear-gradient(left top, #e0e0e0, #eeeeee);
+  background: #E0E0E0;
+  background: linear-gradient(left top, #E0E0E0, #EEEEEE);
   height: 15px;
   margin: 5px;
   width: 300px;
 }
 
-.thumb {
+.j-plugin-slider__thumb {
   background: blue;
   border-radius: 3px;
   cursor: pointer;
-  left: 10px;
   height: 25px;
   position: relative;
   top: -5px;
