--- a/src/view/style.css
+++ b/src/view/style.css
@@ -1,51 +1,88 @@
-.j-plugin-slider {
+.j-plugin-slider,
+.j-plugin-slider_vertical {
   border-radius: 5px;
-  background: #e0e0e0;
+  background: rgb(240, 240, 240);
   background: linear-gradient(left top, #e0e0e0, #eeeeee);
-  height: 15px;
-  margin: 5px;
+  height: 5px;
+  margin: 10px 15px;
   position: relative;
   width: 300px;
 }
 
-.j-plugin-slider__thumb {
-  background: blue;
-  border-radius: 3px;
-  cursor: pointer;
-  height: 25px;
-  position: absolute;
-  top: -5px;
-  width: 10px;
-}
-
 .j-plugin-slider_vertical {
-  border-radius: 5px;
-  background: #e0e0e0;
-  background: linear-gradient(left top, #e0e0e0, #eeeeee);
-  height: 300px;
-  margin: 5px;
-  position: relative;
+  margin: 20px 0;
   width: 15px;
 }
 
-.j-plugin-slider__thumb_vertical {
-  background: blue;
-  border-radius: 3px;
-  cursor: pointer;
-  left: -5px;
-  height: 10px;
-  position: absolute;
-  width: 25px;
+.j-plugin-slider_with-point {
+  margin-top: 40px;
 }
 
-.j-plugin-slider__range {
-  background: rgb(86, 169, 247);
-  height: 15px;
+.j-plugin-slider_with-point_vertical {
+  margin-right: 40px;
+}
+
+.j-plugin-slider__thumb,
+.j-plugin-slider__thumb_vertical {
+  background: rgb(240, 78, 50);
+  border-radius: 50%;
+  cursor: pointer;
+  height: 19px;
+  position: absolute;
+  transform: translateY(-35%) translateX(-50%);
+  width: 19px;
+}
+
+.j-plugin-slider__thumb_vertical {
+  transform: translateY(-50%) translateX(-35%);
+  background: rgb(240, 78, 50);
+}
+
+.j-plugin-slider__range,
+.j-plugin-slider__range_vertical {
+  background: rgb(255, 211, 201);
+  height: 5px;
   position: absolute;
 }
 
 .j-plugin-slider__range_vertical {
-  background: rgb(86, 169, 247);
+  width: 5px;
+}
+
+.j-slider__follower-point,
+.j-slider__follower-point_vertical {
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: white;
+  font-size: 12px;
+  height: 18px;
   position: absolute;
-  width: 15px;
+  padding-top: 2px;
+  top: -25px;
+  transform: translateX(-6px);
+  text-align: center;
+  width: 30px;
+}
+
+.j-slider__follower-point_vertical {
+  top: 0;
+  transform: translateX(25px);
+}
+
+.j-slider__follower-point::after,
+.j-slider__follower-point_vertical::after {
+  bottom: -3px;
+  border-radius: 0 0 1px 0;
+  background-color: rgb(240, 78, 50);
+  content: "";
+  height: 7px;
+  left: 40%;
+  position: absolute;
+  transform: rotate(45deg);
+  width: 7px;
+}
+
+.j-slider__follower-point_vertical::after {
+  left: -3px;
+  top: 30%;
 }
